bug fix checkmark not showing

--- a/src/App.scss
+++ b/src/App.scss
@@ -38,6 +38,7 @@ body {
   flex:5;
   position: relative;
   margin-left: 240px;
+  overflow: hidden;
 }
 .hide {
   display: none;
